# xml2spread

./: .gitignore  pyproject.toml  xml2spread.py
tests/: test_utils.py  test_xml2spread.py
tests/fixtures/xml_facturas/: FACTURAE001-271720503629900.XML  FACTURAE001-272020503629900.XML  FACTURAE001-272120503629900.XML  FACTURAE001-272220503629900.XML  FACTURAE001-272820503629900.XML  FACTURAE001-273120503629900.XML  FACTURAE001-273220503629900.XML  FACTURAE001-273320503629900.XML  FACTURAE001-273720503629900.XML  FACTURAE001-273820503629900.XML
tests/fixtures/xml_montos/: FACTURAE001-279020503629900.XML  FACTURAE001-279120503629900.XML  FACTURAE001-279220503629900.XML
xml2spread/: __main__.py  actions.py  globals.py  procedures.py  utils.py
