[tool.poetry]
name = "xml2spread"
version = "0.1.0"
description = "Convertir xml de facturas a datos en Excel"
authors = ["DEliasVilelaC <danielvilelayo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pudb = "^2022.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
